tests/pos/simple/19-bounded-poly.ts


export function foo<V extends number | string>(x: V): V {
    return x;
}

assert(foo(1) === 1);
